--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,28 @@
 version: '3'
 services:
   movies:
-    image: rahamshaik/moviespaytm:latest
+    image: harikrishna68/moviespaytm:latest
     ports:
       - "81:80"
     deploy:
       replicas: 3
 
   train:
-    image: rahamshaik/trainpaytm:latest
+    image: harikrishna68/trainpaytm:latest
     ports:
       - "82:80"
     deploy:
       replicas: 3
 
   dth:
-    image: rahamshaik/dthpaytm:latest
+    image: harikrishna68/dthpaytm:latest
     ports:
       - "83:80"
     deploy:
       replicas: 3
 
   recharge:
-    image: rahamshaik/rechargepaytm:latest
+    image: harikrishna68/rechargepaytm:latest
     ports:
       - "84:80"
     deploy:
